add necessary plugins for site generation